--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio</title>
-    <link rel="icon" href="./images/nic.jpg" />
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
@@ -15,38 +15,37 @@
         <p>| <a href="./index.html">Homepage</a> | <a href="./discography.html"> Discography</a> | <strong>Bio</strong> |</p>
     </nav>
 
-    <ul>
-        <li><a href="#chad">Chad Kroeger</a></li>
-        <li><a href="#ryan">Ryan Peake</a></li>
-        <li><a href="#mike">Mike Kroeger</a></li>
-        <li><a href="#dan">Daniel Adair</a></li>
-    </ul>
+    <div>
+        <ul class="list-container"> 
+            <li><a href="#chad">Chad Kroeger</a></li>
+            <li><a href="#ryan">Ryan Peake</a></li>
+            <li><a href="#mike">Mike Kroeger</a></li>
+            <li><a href="#dan">Daniel Adair</a></li>
+        </ul>
+    </div>
+
 
     <br />
-    
-    <img id="chad" width="100%" src="./images/chad.png" />
-    <br />
-    <p>Chad Kroeger - Lead singer, lead guitarist</p>
+
+    <img id="chad" class="nic" width="300px" src="./images/nic2.jpg" />
+    <p class="artist-name">Chad Kroeger - Lead singer, lead guitarist</p>
     <br />
     <br />
 
     <img id="ryan" width="300px" src="./images/ryan.jpg" />
-    <br />
-    <p>Ryan Peake - Guitarist, backing vocalist</p>
+    <p class="artist-name">Ryan Peake - Guitarist, backing vocalist</p>
     <br />
     <br />
 
     <img id="mike" width="300px" src="./images/mike.jpg" />
-    <br />
-    <p>Mike Kroeger - Bass guitarist</p>
+    <p class="artist-name">Mike Kroeger - Bass guitarist</p>
     <br />
     <br />
 
     <img id="dan" width="300px" src="./images/dan.jpg" />
+    <p class="artist-name">Daniel Adair - Drummer</p>
     <br />
-    <p>Daniel Adair - Drummer</p>
     <br />
-    <br /> 
 
     <footer>
         <p>Elise Hall Enterprises&copy; Copyright 2022. All Rights Reserved.</p>
