--- a/bio.html
+++ b/bio.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bio</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="icon" href="./images/nic.png" />
 </head>
 
 <body>
